--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "termux-wabot",
-  "version": "0.0.2",
+  "name": "CTL-CLIENT",
+  "version": "1.0",
   "description": "No comment",
   "main": "index.js",
   "directories": {
@@ -17,7 +17,7 @@
     "whatsapp",
     "bot"
   ],
-  "author": "MhankBarBar",
+  "author": "by davi",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "^3.4.1",
