--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "By Davi Ctl Owner"
+    "start": "node index.js"
   },
   "keywords": [
     "termux",
